[package]
name = "cyloader"
version = "0.1.0"
build = "build.rs"

[workspace]
members = ["cyapi"]

[lib]
name = "ccyloader"
path = "src/clib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "cypress-updater"
path = "src/updater.rs"

[build-dependencies]
cbindgen = "0.19.0"

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4"
env_logger = "0.9"
libc = "0.2"
cyapi = {path = "cyapi"}

